all core functionalities completed
